<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Spinner
        android:id="@+id/spinner_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/category_prompt" />

    <EditText
        android:id="@+id/edittext_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/amount_hint"/>

    <EditText
        android:id="@+id/edittext_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/description_hint"/>

    <Button
        android:id="@+id/button_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_date" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit" />
</LinearLayout>
